--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>MarkDown Notebook</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="webicon/notes.ico">
 </head>
 <body>
     <!-- 载入Vue.js -->
