--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <!-- 载入Vue.js -->
-    <script src="https://unpkg.com/vue/dist/vue.js"></script>
+    <script src="https://unpkg.com/vue@2.6.10/dist/vue.js"></script>
     <!-- 载入marked -->
-    <script src="https://unpkg.com/marked"></script>
+    <script src="https://unpkg.com/marked@0.7.0/lib/marked.js"></script>
     <!-- 载入moment -->
-    <script src="https://unpkg.com/moment"></script>
+    <script src="https://unpkg.com/moment@2.24.0/moment.js"></script>
     <div id="mdNotebook" class="notebook">
         <!-- 工具栏 -->
         <aside class="tool-bar">
